# tracking-app

./: .gitignore  DESIGN.md  README.md  project_status.md
core/: CMakeLists.txt
core/src/: Tracker.cpp  Tracker.h
desktop/: package-lock.json  package.json
desktop/src/: App.css  App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  tracking_bridge.rs
desktop/src/components/: PlayerControls.tsx  ROISelection.tsx  Timeline.tsx  VideoPlayer.tsx
desktop/src/hooks/: useTracking.ts  useVideoPlayer.ts
mobile/: README.md
scripts/: lockon_prototype.py  nanotrack_prototype.py
